[gd_scene load_steps=24 format=3 uid="uid://i48tabjyt08t"]


[ext_resource type="Script" path="res://scripts/ItemShop.gd" id="1_ed3xk"]
[ext_resource type="PackedScene" uid="uid://btqmnmpytpfkq" path="res://Scenes/Functional/Item.tscn" id="2_3qixg"]
[ext_resource type="Texture2D" uid="uid://dqhwy21a3peoc" path="res://resources/sprites/item-shop-bg.png" id="2_b1eqh"]
[ext_resource type="PackedScene" uid="uid://dbc7vk84ewdqo" path="res://Scenes/Functional/BasicButton.tscn" id="3_exxd0"]
[ext_resource type="Texture2D" uid="uid://ckxdnq45ht1om" path="res://resources/sprites/DracoSprites/closed-item-draco.png" id="3_vtfmh"]
[ext_resource type="Texture2D" uid="uid://mqg53g3e6wqd" path="res://resources/sprites/DracoSprites/open-item-draco.png" id="4_8infh"]

[ext_resource type="Shader" path="res://resources/fonts/selfLayerEffects.gdshader" id="4_cax4p"]
[ext_resource type="Texture2D" uid="uid://6yrr4w034b3y" path="res://resources/sprites/door-sprites.png" id="6_sgoiq"]
[ext_resource type="PackedScene" uid="uid://cc1ttocg7gplt" path="res://Scenes/Functional/Sprite2DButton.tscn" id="7_lh6kn"]
[ext_resource type="Texture2D" uid="uid://d1fiq2dit7paw" path="res://resources/sprites/next-prev-spritesheet.png" id="8_23cwk"]
[ext_resource type="Texture2D" uid="uid://cl5jqbdyfjv4h" path="res://resources/sprites/Coin.png" id="9_embo4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hevdg"]
resource_local_to_scene = true
shader = ExtResource("4_cax4p")
shader_parameter/onoffMult = false
shader_parameter/onoffSoftLight = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tb0m"]
resource_local_to_scene = true
shader = ExtResource("4_cax4p")
shader_parameter/onoffMult = false
shader_parameter/onoffSoftLight = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_cubxy"]
resource_local_to_scene = true
shader = ExtResource("4_cax4p")
shader_parameter/onoffMult = false
shader_parameter/onoffSoftLight = false

[node name="ItemShop" type="CanvasLayer" groups=["Items"]]
script = ExtResource("1_ed3xk")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_b1eqh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TextureRect"]
position = Vector2(642, 366)
scale = Vector2(3.97266, 4.05833)
sprite_frames = SubResource("SpriteFrames_rwhhi")
animation = &"talk"
frame_progress = 0.195037

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sprite2dButton" parent="Control" instance=ExtResource("7_lh6kn")]
material = SubResource("ShaderMaterial_hevdg")
position = Vector2(91, 637)
scale = Vector2(1.46875, 1.46875)
texture = ExtResource("6_sgoiq")
hframes = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = -2.0
offset_top = 11.0
offset_right = 812.0
offset_bottom = 552.0
size_flags_horizontal = 0
size_flags_vertical = 2
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="ItemContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 15

[node name="ItemsFirstRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ItemContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="Item1" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("2_3qixg")]
layout_mode = 2

[node name="Item2" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 1

[node name="Item3" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 2

[node name="Item4" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 3

[node name="ItemsSecondRow" type="HBoxContainer" parent="MarginContainer/HBoxContainer/ItemContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Item5" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 4

[node name="Item6" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 5

[node name="Item7" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 6

[node name="Item8" parent="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow" instance=ExtResource("2_3qixg")]
layout_mode = 2
metadata/ID = 7

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"sfx"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
offset_left = 197.0
offset_top = 559.0
offset_right = 599.0
offset_bottom = 665.0
alignment = 1

[node name="Prev" parent="HBoxContainer" instance=ExtResource("7_lh6kn")]
material = SubResource("ShaderMaterial_3tb0m")
position = Vector2(91.8572, 40)
scale = Vector2(3.71429, 3.71429)
texture = ExtResource("8_23cwk")
hframes = 2
vframes = 2
hoverWhiteStandard = true

[node name="Next" parent="HBoxContainer" instance=ExtResource("7_lh6kn")]
material = SubResource("ShaderMaterial_cubxy")
position = Vector2(312.857, 40)
scale = Vector2(3.714, 3.714)
texture = ExtResource("8_23cwk")
hframes = 2
vframes = 2
frame = 1
hoverWhiteStandard = true

[node name="WarningScreen" type="ColorRect" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.011
anchor_right = 0.594
anchor_bottom = 0.011
offset_left = -512.32
offset_top = 200.08
offset_right = 351.68
offset_bottom = 641.08
color = Color(0.0941176, 0.0941176, 0.0862745, 0.870588)

[node name="MarginContainer" type="MarginContainer" parent="WarningScreen"]
visible = false
layout_mode = 0
offset_left = 39.0001
offset_top = -23.0
offset_right = 847.0
offset_bottom = 424.0

[node name="RichTextLabel" type="RichTextLabel" parent="WarningScreen/MarginContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "
Everything here is meant to somewhat resemble what it affects, play around with the various options inside of the equip screen! Make your build and go beat up that punching bag!"

[node name="Close" type="Button" parent="WarningScreen"]
layout_mode = 2
offset_left = 752.0
offset_top = 16.0
offset_right = 856.0
offset_bottom = 96.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 38
text = "X"

[node name="MoneyHBox" type="HBoxContainer" parent="."]
offset_left = 32.0
offset_top = 12.0
offset_right = 427.0
offset_bottom = 64.0
theme_override_constants/separation = 30

[node name="Coin" type="TextureRect" parent="MoneyHBox"]
layout_mode = 2
texture = ExtResource("9_embo4")
expand_mode = 2
stretch_mode = 4

[node name="MoneyLabel" type="Label" parent="MoneyHBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "0"

[connection signal="SpriteButtonPressed" from="Control/Sprite2dButton" to="." method="_on_sprite_2d_button_sprite_button_pressed"]
[connection signal="mouse_entered" from="Control/Sprite2dButton" to="." method="_on_sprite_2d_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Sprite2dButton" to="." method="_on_sprite_2d_button_mouse_exited"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow/Item1" to="." method="_on_item_1_bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow/Item1" to="." method="bought_item"]
[connection signal="itemPressed" from="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow/Item1" to="." method="item_pressed"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow/Item2" to="." method="bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow/Item3" to="." method="bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsFirstRow/Item4" to="." method="bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow/Item5" to="." method="bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow/Item6" to="." method="bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow/Item7" to="." method="bought_item"]
[connection signal="bought_item" from="MarginContainer/HBoxContainer/ItemContainer/ItemsSecondRow/Item8" to="." method="bought_item"]
[connection signal="SpriteButtonPressed" from="HBoxContainer/Prev" to="." method="_on_last_page_button_pressed"]
[connection signal="SpriteButtonPressed" from="HBoxContainer/Next" to="." method="_on_next_page_button_pressed"]
[connection signal="pressed" from="WarningScreen/Close" to="." method="_on_close_pressed"]
